# data-engineering-zoomcamp

homeworks/03-data-warehouse/: answers.md  answers.sql  docker-compose.yml
homeworks/04-analytics-engineering/: .gitignore  dbt_project.yml
homeworks/04-analytics-engineering/models/core/: fact_fhv_trips.sql  fact_trips.sql
homeworks/04-analytics-engineering/models/staging/: schema.yml  (+1 more)
homeworks/2024/01-docker-terraform/: .gitignore  answers.md  upload-data.ipynb  variables.tf
homeworks/2024/04-analytics-engineering/: answers.sql  data_ingestion.sql
homeworks/2024/05-batch/: .gitignore  05-batch.ipynb  answers.md
homeworks/2025/01-docker-terraform/: .gitignore  answers.md  ingest_data.py  pyproject.toml
homeworks/2025/02-workflow-orchestration/: .gitignore  README.md  docker-compose.yml
homeworks/2025/03-data-warehouse/: answers.md  answers.sql
homeworks/2025/04-analytics-engineering/: .gitignore  answers.md  dbt_project.yml  ingest_data.py  profiles.yml  pyproject.toml
homeworks/2025/04-analytics-engineering/models/core/: dim_fhv_trips.sql  fct_fhv_monthly_zone_traveltime_p90.sql  fct_taxi_trips.sql  fct_taxi_trips_monthly_fare_p95.sql  fct_taxi_trips_quarterly_revenue.sql
homeworks/2025/04-analytics-engineering/models/staging/: schema.yml  stg_fhv_tripdata.sql  stg_green_tripdata.sql  stg_yellow_tripdata.sql
homeworks/2025/05-batch/: answers.md  homework.py  pyproject.toml
homeworks/2025/06-streaming/: answers.md  pyproject.toml  send_data.py
homeworks/2025/workshop-dlt/: .gitignore  answers.md  data_ingest.py  pyproject.toml
(+6 files in other folders)
