[project]
name = "04-analytics-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-core>=1.9.2",
    "dbt-postgres>=1.9.0",
    "pandas>=2.2.3",
    "polars>=1.22.0",
    "psycopg2>=2.9.10",
    "pyarrow>=19.0.1",
    "sqlalchemy>=2.0.38",
    "tqdm>=4.67.1",
]
